# agent-chain

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: .gitignore
.codex/: instructions.md
.cursor/rules/: adversarial-review.mdc  agent-chain.mdc  chain-design-pattern.mdc  co-design-mode.mdc  coding-standards.mdc  commit-plans.mdc  markdown-frontmatter.mdc  no-autonomous-git-commits.mdc  paper-trail.mdc  python-venvs.mdc  testing-policy.mdc  warnings-as-errors.mdc  workflow-folder.mdc
docs/: example-chain.toml  tutorial.md
examples/: codex-impl-review.toml  cursor-adversarial-review.toml  full-pipeline.toml  review-only.toml
examples/live-tests/: a1-docstrings.toml  a2-code-quality.toml  a3-test-coverage.toml  b1-readme.toml  b2-tutorial.toml
scripts/: commit-helper.py  cursor-wrapper.py
skills/agent-chain/: SKILL.md
skills/agent-chain/references/: operating.md  planning.md  profile-enterprise.md  profile-indie.md
src/agent_chain/: __init__.py  __main__.py  chain.py  cli.py  report.py  runner.py  telemetry.py  types.py  variables.py
src/agent_chain/backends/: __init__.py  claude_code.py  codex_cli.py  cursor_cli.py  noop.py
tests/: test_chain.py  test_cli.py  test_cursor_wrapper.py  test_report.py  test_runner.py  test_runner_edge_cases.py  test_telemetry.py  test_timeout_centralization.py  test_variables.py
tests/fixtures/: claude_raw.json  codex_events.jsonl  cursor_stream.jsonl  full_chain.toml  minimal_chain.toml
tests/test_backends/: test_claude_code.py  test_codex_cli.py  test_cursor_cli.py
